tests/compliant-resources/12_eksNetPolEnforce_compliant.yaml
# default-deny-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: protected-namespace
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
