tests/compliant-resources/15_eksMountedSecrets_compliant.yaml
# mounted-secret-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mounted-secret-pod
spec:
  containers:
    - name: nginx
      image: nginx
      volumeMounts:
        - name: secret-volume
          mountPath: "/etc/secret"
          readOnly: true
  volumes:
    - name: secret-volume
      secret:
        secretName: my-secret
