tests/compliant-resources/19_eksRestrictDefaultServiceAccount_compliant.yaml
# custom-sa-pod.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: custom-sa
---
apiVersion: v1
kind: Pod
metadata:
  name: custom-sa-pod
spec:
  serviceAccountName: custom-sa
  containers:
    - name: nginx
      image: nginx
