tests/compliant-resources/1_eksprivescalationeffect_compliant.yaml
apiVersion: v1
kind: Pod
metadata:
  name: non-privileged-pod
spec:
  containers:
    - name: nginx
      image: nginx
      securityContext:
        privileged: false
