tests/compliant-resources/20_eksNoAutomountServiceAccountToken_compliant.yaml
# no-automount-sa-token-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: no-automount-sa-token-pod
spec:
  automountServiceAccountToken: false
  containers:
    - name: nginx
      image: nginx
