tests/compliant-resources/5_eksReadOnlyRootFilesystem_compliant.yaml
# readonly-filesystem-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: readonly-filesystem-pod
spec:
  containers:
    - name: nginx
      image: nginx
      securityContext:
        readOnlyRootFilesystem: true
