tests/compliant-resources/6_eksAllowedCapabilitiesEffect_compliant.yaml
# allowed-capabilities-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: allowed-capabilities-pod
spec:
  containers:
    - name: nginx
      image: nginx
      securityContext:
        capabilities:
          add:
            - NET_BIND_SERVICE  # Assuming this is allowed in your policy
