tests/compliant-resources/9_eksResourceLimits_compliant.yaml
# with-resource-limits-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: with-resource-limits-pod
spec:
  containers:
    - name: nginx
      image: nginx
      resources:
        requests:
          cpu: "250m"
          memory: "128Mi"
        limits:
          cpu: "500m"
          memory: "256Mi"
